# ChangeLog for net-wireless/ipw3945d
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw3945d/ChangeLog,v 1.12 2007/01/08 20:57:15 phreak Exp $

  08 Jan 2007; Christian Heim <phreak@gentoo.org>
  -ipw3945d-1.7.22-r3.ebuild, ipw3945d-1.7.22-r4.ebuild:
  Removing the old revision, using chmod / chown directly (sue me, fowners /
  fperms won't work on files outside of ${D}).

  22 Dec 2006; Christian Heim <phreak@gentoo.org> files/ipw3945d-init.d:
  Fixing a bug within the init-script, using 'exit 1' isn't allowed (thanks to
  Magnus Ahlberg in #158814).

  18 Dec 2006; Christian Heim <phreak@gentoo.org> ipw3945d-1.7.22-r4.ebuild:
  Adding a postinst hack, to change the permission/ownership in case the
  package is already present on the system. Without this hack, the
  permission/ownership changes to /sbin/ipw3945d and /var/run/ipw3945d wont be
  merged onto the ROOT filesystem.

  17 Dec 2006; Christian Heim <phreak@gentoo.org> files/ipw3945d-conf.d,
  ipw3945d-1.7.22-r4.ebuild:
  Implementing the changes Jan Kundrat provided, many thanks to him.

*ipw3945d-1.7.22-r4 (17 Dec 2006)

  17 Dec 2006; Christian Heim <phreak@gentoo.org> files/ipw3945d-conf.d,
  +files/ipw3945d-1.7.22-modprobe.conf, files/ipw3945d-init.d,
  +ipw3945d-1.7.22-r4.ebuild:
  Revision bump, hopefully fixing some of the bugs introduced by ripping of
  Hendrik's modprobe.conf files.

  07 Dec 2006; Christian Heim <phreak@gentoo.org> metadata.xml:
  Adding Seemant as secondary maintainer.

*ipw3945d-1.7.22-r3 (09 Sep 2006)

  09 Sep 2006; Christian Heim <phreak@gentoo.org> files/ipw3945d-init.d,
  -ipw3945d-1.7.22-r1.ebuild, -ipw3945d-1.7.22-r2.ebuild,
  +ipw3945d-1.7.22-r3.ebuild:
  Hopefully finally fixing #142560 (thanks to Ryan Hill for the pointer on the
  forums thread). Removing obsolete versions.

*ipw3945d-1.7.22-r2 (05 Sep 2006)

  05 Sep 2006; Christian Heim <phreak@gentoo.org> +files/ipw3945d-conf.d,