@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/ipw3945d
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw3945d/ChangeLog,v 1.12 2007/01/08 20:57:15 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw3945d/ChangeLog,v 1.13 2007/01/11 18:37:24 phreak Exp $
+
+  11 Jan 2007; Christian Heim <phreak@gentoo.org> ipw3945d-1.7.22-r4.ebuild:
+  Fixing src_install (was munging with stuff outside , which came from the
+  change fowners/fperms -> chown/chmod), adjusting pkg_postinst.
 
   08 Jan 2007; Christian Heim <phreak@gentoo.org>
   -ipw3945d-1.7.22-r3.ebuild, ipw3945d-1.7.22-r4.ebuild:
